compilateur/y.output
Nonterminals useless in grammar

   Vide


Terminals unused in grammar

   tVOID
   tERROR
   tFLOAT
   tRET
   tWHILE
   tIF
   tELSE
   tCMP
   tINF
   tSUP
   tINFEQUAL
   tSUPEQUAL


Rules useless in grammar

   30 Vide: %empty


Grammar

    0 $accept: S $end

    1 S: FunctionMain

    2 FunctionMain: tINT tMain tOB tCB Body
    3             | %empty

    4 Type: tINT
    5     | tCHAR

    6 $@1: %empty

    7 Body: tOA $@1 Contenus tCA

    8 Contenus: Contenu Contenus
    9         | Contenu

   10 Contenu: Aff
   11        | Print
   12        | Declaration

   13 $@2: %empty

   14 Declaration: Type tVAR $@2 AffectationDuringDeclaration MultipleDeclaration

   15 $@3: %empty

   16 Declaration: tCONST tINT tVAR $@3 AffectationDuringDeclaration MultipleDeclaration

   17 $@4: %empty

   18 MultipleDeclaration: tSEP tVAR $@4 AffectationDuringDeclaration MultipleDeclaration
   19                    | tSEMCOL

   20 AffectationDuringDeclaration: tEQUAL E

   21 Print: tPRINTF tOB tVAR tCB tSEMCOL

   22 Aff: tVAR tEQUAL E tSEMCOL

   23 E: tREAL
   24  | tNUMBER
   25  | tVAR
   26  | E tADD E
   27  | E tSUB E
   28  | E tMUL E
   29  | E tDIV E


Terminals, with rules where they appear

$end (0) 0
error (256)
tNUMBER (258) 24
tREAL (259) 23
tVAR (260) 14 16 18 21 22 25
tDIV (261) 29
tMUL (262) 28
tADD (263) 26
tSUB (264) 27
tEQUAL (265) 20 22
tOB (266) 2 21
tCB (267) 2 21
tOA (268) 7
tCA (269) 7
tINT (270) 2 4 16
tCHAR (271) 5
tVOID (272)
tERROR (273)
tFLOAT (274)
tSEMCOL (275) 19 21 22
tSEP (276) 18
tMain (277) 2
tRET (278)
tWHILE (279)
tIF (280)
tELSE (281)
tCONST (282) 16
tPRINTF (283) 21
tCMP (284)
tINF (285)
tSUP (286)
tINFEQUAL (287)
tSUPEQUAL (288)


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
S (35)
    on left: 1, on right: 0
FunctionMain (36)
    on left: 2 3, on right: 1
Type (37)
    on left: 4 5, on right: 14
Body (38)
    on left: 7, on right: 2
$@1 (39)
    on left: 6, on right: 7
Contenus (40)
    on left: 8 9, on right: 7 8
Contenu (41)
    on left: 10 11 12, on right: 8 9
Declaration (42)
    on left: 14 16, on right: 12
$@2 (43)
    on left: 13, on right: 14
$@3 (44)
    on left: 15, on right: 16
MultipleDeclaration (45)
    on left: 18 19, on right: 14 16 18
$@4 (46)
    on left: 17, on right: 18
AffectationDuringDeclaration (47)
    on left: 20, on right: 14 16 18
Print (48)
    on left: 21, on right: 11
Aff (49)
    on left: 22, on right: 10
E (50)
    on left: 23 24 25 26 27 28 29, on right: 20 22 26 27 28 29


State 0

    0 $accept: . S $end

    tINT  shift, and go to state 1

    $default  reduce using rule 3 (FunctionMain)

    S             go to state 2
    FunctionMain  go to state 3


State 1

    2 FunctionMain: tINT . tMain tOB tCB Body

    tMain  shift, and go to state 4


State 2

    0 $accept: S . $end

    $end  shift, and go to state 5


State 3

    1 S: FunctionMain .

    $default  reduce using rule 1 (S)


State 4

    2 FunctionMain: tINT tMain . tOB tCB Body

    tOB  shift, and go to state 6


State 5

    0 $accept: S $end .

    $default  accept


State 6

    2 FunctionMain: tINT tMain tOB . tCB Body

    tCB  shift, and go to state 7


State 7

    2 FunctionMain: tINT tMain tOB tCB . Body

    tOA  shift, and go to state 8

    Body  go to state 9


State 8

    7 Body: tOA . $@1 Contenus tCA

    $default  reduce using rule 6 ($@1)

    $@1  go to state 10


State 9

    2 FunctionMain: tINT tMain tOB tCB Body .

    $default  reduce using rule 2 (FunctionMain)


State 10

    7 Body: tOA $@1 . Contenus tCA

    tVAR     shift, and go to state 11
    tINT     shift, and go to state 12
    tCHAR    shift, and go to state 13
    tCONST   shift, and go to state 14
    tPRINTF  shift, and go to state 15

    Type         go to state 16
    Contenus     go to state 17
    Contenu      go to state 18
    Declaration  go to state 19
    Print        go to state 20
    Aff          go to state 21


State 11

   22 Aff: tVAR . tEQUAL E tSEMCOL

    tEQUAL  shift, and go to state 22


State 12

    4 Type: tINT .

    $default  reduce using rule 4 (Type)


State 13

    5 Type: tCHAR .

    $default  reduce using rule 5 (Type)


State 14

   16 Declaration: tCONST . tINT tVAR $@3 AffectationDuringDeclaration MultipleDeclaration

    tINT  shift, and go to state 23


State 15

   21 Print: tPRINTF . tOB tVAR tCB tSEMCOL

    tOB  shift, and go to state 24


State 16

   14 Declaration: Type . tVAR $@2 AffectationDuringDeclaration MultipleDeclaration

    tVAR  shift, and go to state 25


State 17

    7 Body: tOA $@1 Contenus . tCA

    tCA  shift, and go to state 26


State 18

    8 Contenus: Contenu . Contenus
    9         | Contenu .

    tVAR     shift, and go to state 11
    tINT     shift, and go to state 12
    tCHAR    shift, and go to state 13
    tCONST   shift, and go to state 14
    tPRINTF  shift, and go to state 15

    $default  reduce using rule 9 (Contenus)

    Type         go to state 16
    Contenus     go to state 27
    Contenu      go to state 18
    Declaration  go to state 19
    Print        go to state 20
    Aff          go to state 21


State 19

   12 Contenu: Declaration .

    $default  reduce using rule 12 (Contenu)


State 20

   11 Contenu: Print .

    $default  reduce using rule 11 (Contenu)


State 21

   10 Contenu: Aff .

    $default  reduce using rule 10 (Contenu)


State 22

   22 Aff: tVAR tEQUAL . E tSEMCOL

    tNUMBER  shift, and go to state 28
    tREAL    shift, and go to state 29
    tVAR     shift, and go to state 30

    E  go to state 31


State 23

   16 Declaration: tCONST tINT . tVAR $@3 AffectationDuringDeclaration MultipleDeclaration

    tVAR  shift, and go to state 32


State 24

   21 Print: tPRINTF tOB . tVAR tCB tSEMCOL

    tVAR  shift, and go to state 33


State 25

   14 Declaration: Type tVAR . $@2 AffectationDuringDeclaration MultipleDeclaration

    $default  reduce using rule 13 ($@2)

    $@2  go to state 34


State 26

    7 Body: tOA $@1 Contenus tCA .

    $default  reduce using rule 7 (Body)


State 27

    8 Contenus: Contenu Contenus .

    $default  reduce using rule 8 (Contenus)


State 28

   24 E: tNUMBER .

    $default  reduce using rule 24 (E)


State 29

   23 E: tREAL .

    $default  reduce using rule 23 (E)


State 30

   25 E: tVAR .

    $default  reduce using rule 25 (E)


State 31

   22 Aff: tVAR tEQUAL E . tSEMCOL
   26 E: E . tADD E
   27  | E . tSUB E
   28  | E . tMUL E
   29  | E . tDIV E

    tDIV     shift, and go to state 35
    tMUL     shift, and go to state 36
    tADD     shift, and go to state 37
    tSUB     shift, and go to state 38
    tSEMCOL  shift, and go to state 39


State 32

   16 Declaration: tCONST tINT tVAR . $@3 AffectationDuringDeclaration MultipleDeclaration

    $default  reduce using rule 15 ($@3)

    $@3  go to state 40


State 33

   21 Print: tPRINTF tOB tVAR . tCB tSEMCOL

    tCB  shift, and go to state 41


State 34

   14 Declaration: Type tVAR $@2 . AffectationDuringDeclaration MultipleDeclaration

    tEQUAL  shift, and go to state 42

    AffectationDuringDeclaration  go to state 43


State 35

   29 E: E tDIV . E

    tNUMBER  shift, and go to state 28
    tREAL    shift, and go to state 29
    tVAR     shift, and go to state 30

    E  go to state 44


State 36

   28 E: E tMUL . E

    tNUMBER  shift, and go to state 28
    tREAL    shift, and go to state 29
    tVAR     shift, and go to state 30

    E  go to state 45


State 37

   26 E: E tADD . E

    tNUMBER  shift, and go to state 28
    tREAL    shift, and go to state 29
    tVAR     shift, and go to state 30

    E  go to state 46


State 38

   27 E: E tSUB . E

    tNUMBER  shift, and go to state 28
    tREAL    shift, and go to state 29
    tVAR     shift, and go to state 30

    E  go to state 47


State 39

   22 Aff: tVAR tEQUAL E tSEMCOL .

    $default  reduce using rule 22 (Aff)


State 40

   16 Declaration: tCONST tINT tVAR $@3 . AffectationDuringDeclaration MultipleDeclaration

    tEQUAL  shift, and go to state 42

    AffectationDuringDeclaration  go to state 48


State 41

   21 Print: tPRINTF tOB tVAR tCB . tSEMCOL

    tSEMCOL  shift, and go to state 49


State 42

   20 AffectationDuringDeclaration: tEQUAL . E

    tNUMBER  shift, and go to state 28
    tREAL    shift, and go to state 29
    tVAR     shift, and go to state 30

    E  go to state 50


State 43

   14 Declaration: Type tVAR $@2 AffectationDuringDeclaration . MultipleDeclaration

    tSEMCOL  shift, and go to state 51
    tSEP     shift, and go to state 52

    MultipleDeclaration  go to state 53


State 44

   26 E: E . tADD E
   27  | E . tSUB E
   28  | E . tMUL E
   29  | E . tDIV E
   29  | E tDIV E .

    tDIV  shift, and go to state 35
    tMUL  shift, and go to state 36
    tADD  shift, and go to state 37
    tSUB  shift, and go to state 38

    $default  reduce using rule 29 (E)


State 45

   26 E: E . tADD E
   27  | E . tSUB E
   28  | E . tMUL E
   28  | E tMUL E .
   29  | E . tDIV E

    tDIV  shift, and go to state 35
    tMUL  shift, and go to state 36
    tADD  shift, and go to state 37
    tSUB  shift, and go to state 38

    $default  reduce using rule 28 (E)


State 46

   26 E: E . tADD E
   26  | E tADD E .
   27  | E . tSUB E
   28  | E . tMUL E
   29  | E . tDIV E

    tDIV  shift, and go to state 35
    tMUL  shift, and go to state 36
    tADD  shift, and go to state 37
    tSUB  shift, and go to state 38

    $default  reduce using rule 26 (E)


State 47

   26 E: E . tADD E
   27  | E . tSUB E
   27  | E tSUB E .
   28  | E . tMUL E
   29  | E . tDIV E

    tDIV  shift, and go to state 35
    tMUL  shift, and go to state 36
    tADD  shift, and go to state 37
    tSUB  shift, and go to state 38

    $default  reduce using rule 27 (E)


State 48

   16 Declaration: tCONST tINT tVAR $@3 AffectationDuringDeclaration . MultipleDeclaration

    tSEMCOL  shift, and go to state 51
    tSEP     shift, and go to state 52

    MultipleDeclaration  go to state 54


State 49

   21 Print: tPRINTF tOB tVAR tCB tSEMCOL .

    $default  reduce using rule 21 (Print)


State 50

   20 AffectationDuringDeclaration: tEQUAL E .
   26 E: E . tADD E
   27  | E . tSUB E
   28  | E . tMUL E
   29  | E . tDIV E

    tDIV  shift, and go to state 35
    tMUL  shift, and go to state 36
    tADD  shift, and go to state 37
    tSUB  shift, and go to state 38

    $default  reduce using rule 20 (AffectationDuringDeclaration)


State 51

   19 MultipleDeclaration: tSEMCOL .

    $default  reduce using rule 19 (MultipleDeclaration)


State 52

   18 MultipleDeclaration: tSEP . tVAR $@4 AffectationDuringDeclaration MultipleDeclaration

    tVAR  shift, and go to state 55


State 53

   14 Declaration: Type tVAR $@2 AffectationDuringDeclaration MultipleDeclaration .

    $default  reduce using rule 14 (Declaration)


State 54

   16 Declaration: tCONST tINT tVAR $@3 AffectationDuringDeclaration MultipleDeclaration .

    $default  reduce using rule 16 (Declaration)


State 55

   18 MultipleDeclaration: tSEP tVAR . $@4 AffectationDuringDeclaration MultipleDeclaration

    $default  reduce using rule 17 ($@4)

    $@4  go to state 56


State 56

   18 MultipleDeclaration: tSEP tVAR $@4 . AffectationDuringDeclaration MultipleDeclaration

    tEQUAL  shift, and go to state 42

    AffectationDuringDeclaration  go to state 57


State 57

   18 MultipleDeclaration: tSEP tVAR $@4 AffectationDuringDeclaration . MultipleDeclaration

    tSEMCOL  shift, and go to state 51
    tSEP     shift, and go to state 52

    MultipleDeclaration  go to state 58


State 58

   18 MultipleDeclaration: tSEP tVAR $@4 AffectationDuringDeclaration MultipleDeclaration .

    $default  reduce using rule 18 (MultipleDeclaration)
